# starnavi_REST_API_slivko

./: .env-sample  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  starnavi_test_project_slivko.postman_collection.json
.github/workflows/: django.yml
posts/: admin.py  models.py  serializers.py  urls.py  views.py
posts/analytics/: urls.py  views.py
posts/migrations/: 0001_initial.py  0002_post_creator.py  0003_auto_20220725_1722.py
social_network_core/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py
tests/posts/: test_analytics.py  test_create_post.py  test_delete_post.py  test_post_likes.py
tests/users/: test_register.py  test_user_activity.py  test_users.py
users/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_baseuser_options.py  0003_auto_20220725_2337.py
